# fanqie-publish-sync

./: .editorconfig  .gitattributes  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
backend/bootstrap/: __init__.py  application.py
backend/features/crawling/: __init__.py  crawler_chapter_runner.py  crawler_content_cleaner.py  crawler_http_client.py  crawler_models.py  crawler_service.py  crawler_text_writer.py  crawler_write_buffer.py  use_cases.py
backend/features/novel_processing/: ad_cleaner.py  chapter_formatter.py  chapter_parser.py  chapter_text_parser.py  clean_text.py  models.py  plain_text.py  process_novel.py  sentence_fixer.py  split_novel.py  text_file_updater.py  text_normalizer.py  (+1 more)
backend/runtime/: data_reset.py  defaults.py  errors.py  logging.py  paths.py
frontend/: index.html
frontend/assets/: app.js  bundle.js  styles.css
tests/: test_api_webview_state.py  test_backend_architecture.py  test_backend_character_material_prompt.py  test_backend_novel_crawler_xsbook_adapter.py  test_backend_smoke.py  test_browser_debug_performance.py  test_desktop_contracts.py  test_fanqie_task_log.py  test_feature_use_cases.py  test_frontend_asset_structure.py  test_frontend_backend_contract.py  test_project_package_hygiene.py  test_service_chapter_text_parser.py  test_service_text_file_updater.py  test_shared_app_data_reset.py  test_shared_app_paths.py  test_shared_json_serialization.py  test_shared_task_event.py  test_shared_task_result.py
tools/: build_exe.py  bundle_js.py  clean_pyc.py  convert_png_to_ico.py  package_project.py  start.py
(+66 files in other folders)
