[project]
name = "fanqie-publish-sync-assistant"
version = "1.0.0"
description = "番茄发布同步助手"
requires-python = ">=3.10"
dependencies = [
  "pywebview>=5.0",
  "playwright>=1.44.0",
  "requests>=2.31.0",
  "beautifulsoup4>=4.12.0",
  "lxml>=5.0.0",
  "openai>=1.40.0",
]

[tool.ruff]
line-length = 120
